--- a/desafios/desafioCordel/style.css
+++ b/desafios/desafioCordel/style.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", sans-serif;
+    --fonte3: "Sriracha", cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -12,13 +24,16 @@ header  {
 
 }
 html, body {
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray
 }
 
 header > h1 {
+    font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
 }
 
 header > p {
@@ -37,18 +52,21 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 section.normal {
     background-color: white;
     color: black;
 }
 section.imagem {
-    background-color: rgba(15, 15, 15, 0.747);
+    background-image: url(imagens/background001.jpg);
     color: white;
 }
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.274);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer  {
